Added - Book Appointment Added - Show Appointment Posted Data on Site
First Commit of New Year 2019

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.example.hsc.mdtouch" >
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -45,6 +45,10 @@
         <activity android:name=".MedicalRecords" >
         </activity>
         <activity android:name=".MedicalServices" >
+        </activity>
+        <activity android:name=".Hospitals" >
+        </activity>
+        <activity android:name=".Doctors" >
         </activity>
     </application>
 
