--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.0'
     compile 'com.google.firebase:firebase-core:16.0.4'
     compile 'com.google.firebase:firebase-database:16.0.4'
+    compile 'com.google.firebase:firebase-messaging:17.3.4'
     compile 'com.android.support:design:23.4.0'
 
 }
