--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/main"
@@ -13,13 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity android:name=".MainActivity" >
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".BookAppointment" >
         </activity>
@@ -51,6 +48,12 @@
         <activity android:name=".Hospitals" >
         </activity>
         <activity android:name=".Doctors" >
+        </activity>
+        <activity android:name=".DoctorAppointments" >
+        </activity>
+        <activity android:name=".MyPatients" >
+        </activity>
+        <activity android:name=".ChatDoctors" >
         </activity>
     </application>
 
